--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="box1 box">
             <div class="box-content">
                 <h2>
-                    Health & Personal Care
+                    Best seller in Clothing
                 </h2>
                 <div class="box-img"style="background-image:url('box1_image.jpg');"></div>
                 <p>see more</p>
@@ -92,14 +92,14 @@
         </div></div>
         <div class="box3 box"> <div class="box-content">
             <h2>
-                Health & Personal Care
+               Furniture
             </h2>
             <div class="box-img"style="background-image:url('box3_image.jpg');"></div>
             <p>see more</p>
         </div></div>
         <div class="box4 box"> <div class="box-content">
             <h2>
-                Health & Personal Care
+                Beauty & Makeup
             </h2>
             <div class="box-img"style="background-image:url('box5_image.jpg');"></div>
             <p>see more</p>
@@ -107,7 +107,7 @@
         <div class="box1 box">
             <div class="box-content">
                 <h2>
-                    Health & Personal Care
+                   Pets
                 </h2>
                 <div class="box-img"style="background-image:url('box6_image.jpg');"></div>
                 <p>see more</p>
@@ -115,25 +115,19 @@
         </div>
         <div class="box2 box"> <div class="box-content">
             <h2>
-                Health & Personal Care
+                New in toys
             </h2>
             <div class="box-img"style="background-image:url('box7_image.jpg');"></div>
             <p>see more</p>
         </div></div>
         <div class="box3 box"> <div class="box-content">
             <h2>
-                Health & Personal Care
+               Fashion
             </h2>
             <div class="box-img"style="background-image:url('box8_image.jpg');"></div>
             <p>see more</p>
         </div></div>
-        <div class="box4 box"> <div class="box-content">
-            <h2>
-                Health & Personal Care
-            </h2>
-            <div class="box-img"style="background-image:url('box5_image.jpg');"></div>
-            <p>see more</p>
-        </div></div>
+       
 
     </div>
 </body>
