--- a/index.html
+++ b/index.html
@@ -127,8 +127,63 @@
             <div class="box-img"style="background-image:url('box8_image.jpg');"></div>
             <p>see more</p>
         </div></div>
-       
-
+      
     </div>
 </body>
+<footer>
+    <div class="foot-pannel1">
+        Back to top
+    </div>
+    <div class="foot-pannel2">
+        <ul>
+            <p>Get to Know Us</p>
+            <a> Careers </a>
+            <a> Amazon and Our Planet</a>
+            <a>  Investor Relations</a>
+            <a> Press Releases</a>
+             <a>Amazon Science</a>
+        </ul>
+        <ul>
+            <p>Get to Know Us</p>
+            <a> Careers </a>
+            <a> Amazon and Our Planet</a>
+            <a>  Investor Relations</a>
+            <a> Press Releases</a>
+             <a>Amazon Science</a>
+        </ul>
+        <ul>
+            <p>Get to Know Us</p>
+            <a> Careers </a>
+            <a> Amazon and Our Planet</a>
+            <a>  Investor Relations</a>
+            <a> Press Releases</a>
+             <a>Amazon Science</a>
+        </ul>
+        <ul>
+            <p>Get to Know Us</p>
+            <a> Careers </a>
+            <a> Amazon and Our Planet</a>
+            <a>  Investor Relations</a>
+            <a> Press Releases</a>
+             <a>Amazon Science</a>
+        </ul>
+    </div>
+
+    <div class="foot-pannel3">
+        <div class="logo">
+
+        </div>
+    </div>
+    <div class="foot-pannel4">
+        <div class="pages">
+            <a>
+                Condition and use
+            </a>
+            <a>Privacy notice</a>
+            <a>your ads privacy choices</a>
+        </div>
+        <div class="copy">© 1996-2023, Amazon.com, Inc. or its affiliates</div>
+    </div>
+ </footer>
+
 </html>
